C
13:46:21 **** Incremental Build of configuration Debug for project mcu_boot_u5_bootloader ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/Bootloader_bin_raw.c" -mcpu=cortex-m33 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32U5A9xx -c -I../Core/Inc -I../Drivers/STM32U5xx_HAL_Driver/Inc -I../Drivers/STM32U5xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32U5xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/Bootloader_bin_raw.d" -MT"Core/Src/Bootloader_bin_raw.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/Bootloader_bin_raw.o"
../Core/Src/Bootloader_bin_raw.c: In function 'Receive_Raw_Bin_File':
../Core/Src/Bootloader_bin_raw.c:183:20: error: 'CLR_RED' undeclared (first use in this function); did you mean 'CLEAR_REG'?
  183 |             printf(CLR_RED "[KRITIK] Bootloader (0x0800xxxx) uzerine yazilamaz!\r\n" CLR_RESET);
      |                    ^~~~~~~
      |                    CLEAR_REG
../Core/Src/Bootloader_bin_raw.c:183:20: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/Bootloader_bin_raw.c:183:27: error: expected ')' before string constant
  183 |             printf(CLR_RED "[KRITIK] Bootloader (0x0800xxxx) uzerine yazilamaz!\r\n" CLR_RESET);
      |                   ~       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                           )
../Core/Src/Bootloader_bin_raw.c:193:27: error: expected ')' before string constant
  193 |             printf(CLR_RED "[HATA] Adres Hedefle Uyusmuyor! (Vektor: 0x%08lX)\r\n" CLR_RESET, reset_vector);
      |                   ~       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                           )
../Core/Src/Bootloader_bin_raw.c:198:26: error: expected ')' before string constant
  198 |     else { printf(CLR_RED "[HATA] Dosya cok kucuk.\r\n" CLR_RESET); return; }
      |                  ~       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                          )
../Core/Src/Bootloader_bin_raw.c:224:26: error: expected ')' before 'CLR_RED'
  224 |             printf("\r\n" CLR_RED "[FAIL] Yazma Hatasi! Adr: 0x%X" CLR_RESET "\r\n", (unsigned int)write_addr);
      |                   ~      ^~~~~~~~
      |                          )
../Core/Src/Bootloader_bin_raw.c:239:18: error: expected ')' before 'CLR_GREEN'
  239 |     printf("\r\n" CLR_GREEN "[OK] Basarili! Resetleniyor..." CLR_RESET "\r\n");
      |           ~      ^~~~~~~~~~
      |                  )
make: *** [Core/Src/subdir.mk:52: Core/Src/Bootloader_bin_raw.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

13:46:22 Build Failed. 7 errors, 0 warnings. (took 939ms)

